Adquirir dados de SRAG + docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(format_corona_br)
 export(get_corona_br)
 export(get_corona_jhu)
 export(get_corona_minsaude)
+export(get_srag_minsaude)
 export(plot_corona_br)
 export(plot_corona_minsaude)
 export(plot_uf)
@@ -23,4 +24,5 @@ importFrom(stats,na.omit)
 importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
+importFrom(utils,read.csv2)
 importFrom(utils,write.csv)
